--- a/restaurante/templates/menu.html
+++ b/restaurante/templates/menu.html
@@ -23,16 +23,6 @@
 			});
 		}); 
 	</script>
-	<!--[if lt IE 8]>
-    <div style=' clear: both; text-align:center; position: relative;'>
-        <a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode">
-        	<img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." />
-        </a>
-    </div>
-	<![endif]-->
-    <!--[if lt IE 9]>
-   		<script type="text/javascript" src="js/html5.js"></script>
-	<![endif]-->
 </head>
 <body id="page2">
 	<!--==============================header=================================-->
@@ -57,7 +47,7 @@
         <div class="row-bot">
         	<div class="row-bot-bg">
             	<div class="main">
-                	<h2>Impressive Selection <span>for any Occasion</span></h2>
+                	<h2>Select your favorite <span>chinese food</span></h2>
                 </div>
             </div>
         </div>
@@ -74,8 +64,12 @@
                             <div class="wrapper img-indent-bot">
                                 <figure class="img-indent"><img src="../templates/images/page2-img1.jpg" alt=""></figure>
                                 <div class="extra-wrap">
-                                    <h5>Postre</h5>
+                                    <h3>Postre</h3>
                                     {{postre|safe}}
+                                    <h3>Entrante</h3>
+                                    {{entrante|safe}}
+                                    <h3>Carne</h3>
+                                    {{carne|safe}}
                                 </div>
                             </div>
                             <a class="button-1" href="#">Read More</a>
