--- a/restaurante/templates/catalogue.html
+++ b/restaurante/templates/catalogue.html
@@ -3,19 +3,19 @@
 <head>
     <title>Catalogue</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/reset.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="css/layout.css" type="text/css" media="screen"> 
-    <link rel="stylesheet" href="css/prettyPhoto.css" type="text/css" media="screen">
-    <script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
-    <script src="js/cufon-yui.js" type="text/javascript"></script>
-    <script src="js/cufon-replace.js" type="text/javascript"></script> 
-    <script src="js/Dynalight_400.font.js" type="text/javascript"></script>
-    <script src="js/FF-cash.js" type="text/javascript"></script>  
-    <script src="js/jquery.prettyPhoto.js" type="text/javascript"></script> 
-    <script src="js/hover-image.js" type="text/javascript"></script>
-    <script src="js/jquery.easing.1.3.js" type="text/javascript"></script>  
-    <script src="js/jquery.bxSlider.js" type="text/javascript"></script> 
+    <link rel="stylesheet" href="../templates/css/reset.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="../templates/css/style.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="../templates/css/layout.css" type="text/css" media="screen"> 
+    <link rel="stylesheet" href="../templates/css/prettyPhoto.css" type="text/css" media="screen">
+    <script src="../templates/js/jquery-1.7.1.min.js" type="text/javascript"></script>
+    <script src="../templates/js/cufon-yui.js" type="text/javascript"></script>
+    <script src="../templates/js/cufon-replace.js" type="text/javascript"></script> 
+    <script src="../templates/js/Dynalight_400.font.js" type="text/javascript"></script>
+    <script src="../templates/js/FF-cash.js" type="text/javascript"></script>  
+    <script src="../templates/js/jquery.prettyPhoto.js" type="text/javascript"></script> 
+    <script src="../templates/js/hover-image.js" type="text/javascript"></script>
+    <script src="../templates/js/jquery.easing.1.3.js" type="text/javascript"></script>  
+    <script src="../templates/js/jquery.bxSlider.js" type="text/javascript"></script> 
     <script type="text/javascript">
 		$(document).ready(function() {
 			$('#slider-2').bxSlider({
@@ -30,12 +30,12 @@
 	<!--[if lt IE 8]>
     <div style=' clear: both; text-align:center; position: relative;'>
         <a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode">
-        	<img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." />
+        	<img src="../templates/http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." />
         </a>
     </div>
 	<![endif]-->
     <!--[if lt IE 9]>
-   		<script type="text/javascript" src="js/html5.js"></script>
+   		<script type="text/javascript" src="../templates/js/html5.js"></script>
 	<![endif]-->
 </head>
 <body id="page3">
@@ -75,13 +75,13 @@
                 <div id="slider-2">
                 	<div>
                     	<div class="p4">
-                            <figure><a class="lightbox-image" href="images/slider-img1.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="images/page3-img1.jpg" alt=""></a></figure>
+                            <figure><a class="lightbox-image" href="images/slider-img1.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="../templates/images/page3-img1.jpg" alt=""></a></figure>
                             <h5>Nam liber tempor cusoluta </h5>
                             <p class="p1">Nobis eleifend option congue nihil imperdiet doming quod mazim plac<br>erat facer possim.</p>
                             <p class="p2"><strong class="color-2">Price: $12.95</strong></p>
                             <a class="button-1" href="#">Add to Cart</a>
                         </div>
-                        <figure><a class="lightbox-image" href="images/slider-img2.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="images/page3-img5.jpg" alt=""></a></figure>
+                        <figure><a class="lightbox-image" href="images/slider-img2.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="../templates/images/page3-img5.jpg" alt=""></a></figure>
                         <h5>Nam liber tempor cusoluta </h5>
                         <p class="p1">Nobis eleifend option congue nihil imperdiet doming quod mazim plac<br>erat facer possim.</p>
                         <p class="p2"><strong class="color-2">Price: $12.95</strong></p>
@@ -89,13 +89,13 @@
                     </div>
                     <div>
                     	<div class="p4">
-                            <figure><a class="lightbox-image" href="images/slider-img3.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="images/page3-img2.jpg" alt=""></a></figure>
+                            <figure><a class="lightbox-image" href="images/slider-img3.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="../templates/images/page3-img2.jpg" alt=""></a></figure>
                             <h5>Lorem ipsum dolor</h5>
                             <p class="p1">Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
                             <p class="p2"><strong class="color-2">Price: $9.50</strong></p>
                             <a class="button-1" href="#">Add to Cart</a>
                         </div>
-                        <figure><a class="lightbox-image" href="images/slider-img1.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="images/page3-img6.jpg" alt=""></a></figure>
+                        <figure><a class="lightbox-image" href="images/slider-img1.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="../templates/images/page3-img6.jpg" alt=""></a></figure>
                         <h5>Lorem ipsum dolor</h5>
                         <p class="p1">Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
                         <p class="p2"><strong class="color-2">Price: $9.50</strong></p>
@@ -103,13 +103,13 @@
                     </div>
                     <div>
                     	<div class="p4">
-                            <figure><a class="lightbox-image" href="images/slider-img1.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="images/page3-img3.jpg" alt=""></a></figure>
+                            <figure><a class="lightbox-image" href="images/slider-img1.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="../templates/images/page3-img3.jpg" alt=""></a></figure>
                             <h5>Sed diam nonummy nibh</h5>
                             <p class="p1">Euismod tincidunt ut laoreet dolore magna aliquam erat volutpat wisi<br> enim ad minim.</p>
                             <p class="p2"><strong class="color-2">Price: $15.95</strong></p>
                             <a class="button-1" href="#">Add to Cart</a>
                         </div>
-                        <figure><a class="lightbox-image" href="images/slider-img2.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="images/page3-img7.jpg" alt=""></a></figure>
+                        <figure><a class="lightbox-image" href="images/slider-img2.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="../templates/images/page3-img7.jpg" alt=""></a></figure>
                         <h5>Sed diam nonummy nibh</h5>
                         <p class="p1">Euismod tincidunt ut laoreet dolore magna aliquam erat volutpat wisi<br> enim ad minim.</p>
                         <p class="p2"><strong class="color-2">Price: $15.95</strong></p>
@@ -117,13 +117,13 @@
                     </div>
                     <div>
                     	<div class="p4">
-                            <figure><a class="lightbox-image" href="images/slider-img3.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="images/page3-img4.jpg" alt=""></a></figure>
+                            <figure><a class="lightbox-image" href="images/slider-img3.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="../templates/images/page3-img4.jpg" alt=""></a></figure>
                             <h5>Ut wisi enim ad minim veniam</h5>
                             <p class="p1">Quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
                             <p class="p2"><strong class="color-2">Price: $15.95</strong></p>
                             <a class="button-1" href="#">Add to Cart</a>
                         </div>
-                        <figure><a class="lightbox-image" href="images/slider-img1.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="images/page3-img8.jpg" alt=""></a></figure>
+                        <figure><a class="lightbox-image" href="images/slider-img1.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="../templates/images/page3-img8.jpg" alt=""></a></figure>
                         <h5>Ut wisi enim ad minim veniam</h5>
                         <p class="p1">Quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
                         <p class="p2"><strong class="color-2">Price: $15.95</strong></p>
@@ -131,13 +131,13 @@
                     </div>
                     <div>
                     	<div class="p4">
-                            <figure><a class="lightbox-image" href="images/slider-img1.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="images/page3-img1.jpg" alt=""></a></figure>
+                            <figure><a class="lightbox-image" href="images/slider-img1.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="../templates/images/page3-img1.jpg" alt=""></a></figure>
                             <h5>Nam liber tempor cusoluta </h5>
                             <p class="p1">Nobis eleifend option congue nihil imperdiet doming quod mazim plac<br>erat facer possim.</p>
                             <p class="p2"><strong class="color-2">Price: $12.95</strong></p>
                             <a class="button-1" href="#">Add to Cart</a>
                         </div>
-                        <figure><a class="lightbox-image" href="images/slider-img2.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="images/page3-img5.jpg" alt=""></a></figure>
+                        <figure><a class="lightbox-image" href="images/slider-img2.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="../templates/images/page3-img5.jpg" alt=""></a></figure>
                         <h5>Nam liber tempor cusoluta </h5>
                         <p class="p1">Nobis eleifend option congue nihil imperdiet doming quod mazim plac<br>erat facer possim.</p>
                         <p class="p2"><strong class="color-2">Price: $12.95</strong></p>
@@ -145,13 +145,13 @@
                     </div>
                     <div>
                     	<div class="p4">
-                            <figure><a class="lightbox-image" href="images/slider-img3.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="images/page3-img2.jpg" alt=""></a></figure>
+                            <figure><a class="lightbox-image" href="images/slider-img3.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="../templates/images/page3-img2.jpg" alt=""></a></figure>
                             <h5>Lorem ipsum dolor</h5>
                             <p class="p1">Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
                             <p class="p2"><strong class="color-2">Price: $9.50</strong></p>
                             <a class="button-1" href="#">Add to Cart</a>
                         </div>
-                        <figure><a class="lightbox-image" href="images/slider-img1.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="images/page3-img6.jpg" alt=""></a></figure>
+                        <figure><a class="lightbox-image" href="images/slider-img1.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="../templates/images/page3-img6.jpg" alt=""></a></figure>
                         <h5>Lorem ipsum dolor</h5>
                         <p class="p1">Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
                         <p class="p2"><strong class="color-2">Price: $9.50</strong></p>
@@ -159,13 +159,13 @@
                     </div>
                     <div>
                     	<div class="p4">
-                            <figure><a class="lightbox-image" href="images/slider-img1.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="images/page3-img3.jpg" alt=""></a></figure>
+                            <figure><a class="lightbox-image" href="images/slider-img1.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="../templates/images/page3-img3.jpg" alt=""></a></figure>
                             <h5>Sed diam nonummy nibh</h5>
                             <p class="p1">Euismod tincidunt ut laoreet dolore magna aliquam erat volutpat wisi<br> enim ad minim.</p>
                             <p class="p2"><strong class="color-2">Price: $15.95</strong></p>
                             <a class="button-1" href="#">Add to Cart</a>
                         </div>
-                        <figure><a class="lightbox-image" href="images/slider-img2.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="images/page3-img7.jpg" alt=""></a></figure>
+                        <figure><a class="lightbox-image" href="images/slider-img2.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="../templates/images/page3-img7.jpg" alt=""></a></figure>
                         <h5>Sed diam nonummy nibh</h5>
                         <p class="p1">Euismod tincidunt ut laoreet dolore magna aliquam erat volutpat wisi<br> enim ad minim.</p>
                         <p class="p2"><strong class="color-2">Price: $15.95</strong></p>
@@ -173,13 +173,13 @@
                     </div>
                     <div>
                     	<div class="p4">
-                            <figure><a class="lightbox-image" href="images/slider-img3.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="images/page3-img4.jpg" alt=""></a></figure>
+                            <figure><a class="lightbox-image" href="images/slider-img3.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="../templates/images/page3-img4.jpg" alt=""></a></figure>
                             <h5>Ut wisi enim ad minim veniam</h5>
                             <p class="p1">Quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
                             <p class="p2"><strong class="color-2">Price: $15.95</strong></p>
                             <a class="button-1" href="#">Add to Cart</a>
                         </div>
-                        <figure><a class="lightbox-image" href="images/slider-img1.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="images/page3-img8.jpg" alt=""></a></figure>
+                        <figure><a class="lightbox-image" href="images/slider-img1.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="../templates/images/page3-img8.jpg" alt=""></a></figure>
                         <h5>Ut wisi enim ad minim veniam</h5>
                         <p class="p1">Quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
                         <p class="p2"><strong class="color-2">Price: $15.95</strong></p>
@@ -187,13 +187,13 @@
                     </div>
                     <div>
                     	<div class="p4">
-                            <figure><a class="lightbox-image" href="images/slider-img1.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="images/page3-img1.jpg" alt=""></a></figure>
+                            <figure><a class="lightbox-image" href="images/slider-img1.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="../templates/images/page3-img1.jpg" alt=""></a></figure>
                             <h5>Nam liber tempor cusoluta </h5>
                             <p class="p1">Nobis eleifend option congue nihil imperdiet doming quod mazim plac<br>erat facer possim.</p>
                             <p class="p2"><strong class="color-2">Price: $12.95</strong></p>
                             <a class="button-1" href="#">Add to Cart</a>
                         </div>
-                        <figure><a class="lightbox-image" href="images/slider-img2.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="images/page3-img5.jpg" alt=""></a></figure>
+                        <figure><a class="lightbox-image" href="images/slider-img2.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="../templates/images/page3-img5.jpg" alt=""></a></figure>
                         <h5>Nam liber tempor cusoluta </h5>
                         <p class="p1">Nobis eleifend option congue nihil imperdiet doming quod mazim plac<br>erat facer possim.</p>
                         <p class="p2"><strong class="color-2">Price: $12.95</strong></p>
@@ -201,13 +201,13 @@
                     </div>
                     <div>
                     	<div class="p4">
-                            <figure><a class="lightbox-image" href="images/slider-img3.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="images/page3-img2.jpg" alt=""></a></figure>
+                            <figure><a class="lightbox-image" href="images/slider-img3.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="../templates/images/page3-img2.jpg" alt=""></a></figure>
                             <h5>Lorem ipsum dolor</h5>
                             <p class="p1">Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
                             <p class="p2"><strong class="color-2">Price: $9.50</strong></p>
                             <a class="button-1" href="#">Add to Cart</a>
                         </div>
-                        <figure><a class="lightbox-image" href="images/slider-img1.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="images/page3-img6.jpg" alt=""></a></figure>
+                        <figure><a class="lightbox-image" href="images/slider-img1.jpg" data-gal="prettyPhoto[prettyPhoto]"><img src="../templates/images/page3-img6.jpg" alt=""></a></figure>
                         <h5>Lorem ipsum dolor</h5>
                         <p class="p1">Consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
                         <p class="p2"><strong class="color-2">Price: $9.50</strong></p>
