--- a/restaurante/templates/faq.html
+++ b/restaurante/templates/faq.html
@@ -3,23 +3,23 @@
 <head>
     <title>FAQ</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/reset.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="css/layout.css" type="text/css" media="screen">  
-    <script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
-    <script src="js/cufon-yui.js" type="text/javascript"></script>
-    <script src="js/cufon-replace.js" type="text/javascript"></script> 
-    <script src="js/Dynalight_400.font.js" type="text/javascript"></script>
-    <script src="js/FF-cash.js" type="text/javascript"></script>  
+    <link rel="stylesheet" href="../templates/css/reset.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="../templates/css/style.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="../templates/css/layout.css" type="text/css" media="screen">  
+    <script src="../templates/js/jquery-1.7.1.min.js" type="text/javascript"></script>
+    <script src="../templates/js/cufon-yui.js" type="text/javascript"></script>
+    <script src="../templates/js/cufon-replace.js" type="text/javascript"></script> 
+    <script src="../templates/js/Dynalight_400.font.js" type="text/javascript"></script>
+    <script src="../templates/js/FF-cash.js" type="text/javascript"></script>  
 	<!--[if lt IE 8]>
     <div style=' clear: both; text-align:center; position: relative;'>
         <a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode">
-        	<img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." />
+        	<img src="../templates/http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." />
         </a>
     </div>
 	<![endif]-->
     <!--[if lt IE 9]>
-   		<script type="text/javascript" src="js/html5.js"></script>
+   		<script type="text/javascript" src="../templates/js/html5.js"></script>
 	<![endif]-->
 </head>
 <body id="page5">
