--- a/restaurante/templates/index.html
+++ b/restaurante/templates/index.html
@@ -3,27 +3,27 @@
 <head>
     <title>Gran Chino</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/reset.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="css/layout.css" type="text/css" media="screen"> 
-    <script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
-    <script src="js/cufon-yui.js" type="text/javascript"></script>
-    <script src="js/cufon-replace.js" type="text/javascript"></script> 
-    <script src="js/Dynalight_400.font.js" type="text/javascript"></script>
-    <script src="js/FF-cash.js" type="text/javascript"></script>
-    <script src="js/tms-0.3.js" type="text/javascript"></script>
-    <script src="js/tms_presets.js" type="text/javascript"></script>
-    <script src="js/jquery.easing.1.3.js" type="text/javascript"></script>
-    <script src="js/jquery.equalheights.js" type="text/javascript"></script>    
+    <link rel="stylesheet" href="../templates/css/reset.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="../templates/css/style.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="../templates/css/layout.css" type="text/css" media="screen"> 
+    <script src="../templates/js/jquery-1.7.1.min.js" type="text/javascript"></script>
+    <script src="../templates/js/cufon-yui.js" type="text/javascript"></script>
+    <script src="../templates/js/cufon-replace.js" type="text/javascript"></script> 
+    <script src="../templates/js/Dynalight_400.font.js" type="text/javascript"></script>
+    <script src="../templates/js/FF-cash.js" type="text/javascript"></script>
+    <script src="../templates/js/tms-0.3.js" type="text/javascript"></script>
+    <script src="../templates/js/tms_presets.js" type="text/javascript"></script>
+    <script src="../templates/js/jquery.easing.1.3.js" type="text/javascript"></script>
+    <script src="../templates/js/jquery.equalheights.js" type="text/javascript"></script>    
 	<!--[if lt IE 8]>
     <div style=' clear: both; text-align:center; position: relative;'>
         <a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode">
-        	<img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." />
+        	<img src="../templates/http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." />
         </a>
     </div>
 	<![endif]-->
     <!--[if lt IE 9]>
-   		<script type="text/javascript" src="js/html5.js"></script>
+   		<script type="text/javascript" src="../templates/js/html5.js"></script>
 	<![endif]-->
 </head>
 <body id="page1">
@@ -54,13 +54,13 @@
                         <div class="slider">
                             <ul class="items">
                                 <li>
-                                    <img src="images/slider-img1.jpg" alt="" />
+                                    <img src="../templates/images/slider-img1.jpg" alt="" />
                                 </li>
                                 <li>
-                                    <img src="images/slider-img2.jpg" alt="" />
+                                    <img src="../templates/images/slider-img2.jpg" alt="" />
                                 </li>
                                 <li>
-                                    <img src="images/slider-img3.jpg" alt="" />
+                                    <img src="../templates/images/slider-img3.jpg" alt="" />
                                 </li>
                             </ul>
                         </div>
@@ -75,13 +75,13 @@
         <div class="main">
             <div class="wrapper img-indent-bot">
                 <article class="col-1">
-                	<a href="#"><img class="img-border" src="images/banner-1.jpg" alt=""></a>
+                	<a href="#"><img class="img-border" src="../templates/images/banner-1.jpg" alt=""></a>
                 </article>
                 <article class="col-1">
-                	<a href="#"><img class="img-border" src="images/banner-2.jpg" alt=""></a>
+                	<a href="#"><img class="img-border" src="../templates/images/banner-2.jpg" alt=""></a>
                 </article>
                 <article class="col-2">
-                	<a href="#"><img class="img-border" src="images/banner-3.jpg" alt=""></a>
+                	<a href="#"><img class="img-border" src="../templates/images/banner-3.jpg" alt=""></a>
                 </article>
             </div>
             <div class="wrapper">
