--- a/restaurante/templates/shipping.html
+++ b/restaurante/templates/shipping.html
@@ -3,23 +3,23 @@
 <head>
     <title>Shipping</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/reset.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="css/layout.css" type="text/css" media="screen"> 
-    <script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
-    <script src="js/cufon-yui.js" type="text/javascript"></script>
-    <script src="js/cufon-replace.js" type="text/javascript"></script> 
-    <script src="js/Dynalight_400.font.js" type="text/javascript"></script>
-    <script src="js/FF-cash.js" type="text/javascript"></script>  
+    <link rel="stylesheet" href="../templates/css/reset.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="../templates/css/style.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="../templates/css/layout.css" type="text/css" media="screen"> 
+    <script src="../templates/js/jquery-1.7.1.min.js" type="text/javascript"></script>
+    <script src="../templates/js/cufon-yui.js" type="text/javascript"></script>
+    <script src="../templates/js/cufon-replace.js" type="text/javascript"></script> 
+    <script src="../templates/js/Dynalight_400.font.js" type="text/javascript"></script>
+    <script src="../templates/js/FF-cash.js" type="text/javascript"></script>  
 	<!--[if lt IE 8]>
     <div style=' clear: both; text-align:center; position: relative;'>
         <a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode">
-        	<img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." />
+        	<img src="../templates/http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." />
         </a>
     </div>
 	<![endif]-->
     <!--[if lt IE 9]>
-   		<script type="text/javascript" src="js/html5.js"></script>
+   		<script type="text/javascript" src="../templates/js/html5.js"></script>
 	<![endif]-->
 </head>
 <body id="page4">
@@ -87,7 +87,7 @@
                 	<h3 class="p1">Shipping In</h3>
                     <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
                     <figure class="img-indent-bot">
-                        <iframe width="610" height="310" src="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Brooklyn,+New+York,+NY,+United+States&amp;aq=0&amp;sll=37.0625,-95.677068&amp;sspn=61.282355,146.513672&amp;ie=UTF8&amp;hq=&amp;hnear=Brooklyn,+Kings,+New+York&amp;ll=40.649974,-73.950005&amp;spn=0.01628,0.025663&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe>
+                        <iframe width="610" height="310" src="../templates/http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Brooklyn,+New+York,+NY,+United+States&amp;aq=0&amp;sll=37.0625,-95.677068&amp;sspn=61.282355,146.513672&amp;ie=UTF8&amp;hq=&amp;hnear=Brooklyn,+Kings,+New+York&amp;ll=40.649974,-73.950005&amp;spn=0.01628,0.025663&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe>
                     </figure>
                     <h3>Last Minute Gift Ideas</h3>
                     <h6 class="p2">Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt magna aliquyam eratsed diam voluptua vero eos et accusam et justo duo dolores et ea rebum. </h6>
