--- a/restaurante/templates/index.html
+++ b/restaurante/templates/index.html
@@ -38,9 +38,9 @@
                             <li><a class="active" href="index.html">Home</a></li>
                             <li><a href="menu.html">Menu</a></li>
                             <li><a href="catalogue.html">Catálogo</a></li>
-                            <li><a href="shipping.html">Lugar</a></li>
+                            <li><a href="lugar.html">Lugar</a></li>
                             <li><a href="faq.html">FAQ </a></li>
-                            <li><a href="contact.html">Contacto</a></li>
+                            <li><a href="foro.html">Foro</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -119,8 +119,8 @@
     <footer>
         <div class="main">
         	<div class="aligncenter">
-            	<span>Catering.com &copy; 2012</span>
-                <a rel="nofollow" class="link" target="_blank" href="http://www.templatemonster.com/">Website Template</a> by TemplateMonster.com<br>Busque m&aacute;s plantillas web gratis <a href="http://www.mejoresplantillasgratis.es" target="_blank">en MPG.es</a>.
+            	<span>GranChino.com &copy; 2014</span>
+                <a rel="nofollow" class="link" target="_blank" href="http://www.github.com/zhquan/PFG/">Quan Zhou</a>
             </div>
         </div>
     </footer>
