--- a/restaurante/templates/menu.html
+++ b/restaurante/templates/menu.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../templates/css/style.css" type="text/css" media="screen">
     <link rel="stylesheet" href="../templates/css/layout.css" type="text/css" media="screen"> 
     <script src="../templates/js/jquery-1.7.1.min.js" type="text/javascript"></script>
-    <script src="../templatesjs/cufon-yui.js" type="text/javascript"></script>
+    <script src="../templates/js/cufon-yui.js" type="text/javascript"></script>
     <script src="../templates/js/cufon-replace.js" type="text/javascript"></script> 
     <script src="../templates/js/Dynalight_400.font.js" type="text/javascript"></script>
     <script src="../templates/js/FF-cash.js" type="text/javascript"></script>  
@@ -36,9 +36,9 @@
                             <li><a href="index.html">Home</a></li>
                             <li><a class="active" href="menu.html">Menu</a></li>
                             <li><a href="catalogue.html">Catalogue </a></li>
-                            <li><a href="shipping.html">Shipping</a></li>
+                            <li><a href="lugar.html">Lugar</a></li>
                             <li><a href="faq.html">FAQ </a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="foro.html">Foro</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -47,7 +47,7 @@
         <div class="row-bot">
         	<div class="row-bot-bg">
             	<div class="main">
-                	<h2>Select your favorite <span>chinese food</span></h2>
+                	<h2>Chinese food <span>for any Occasion</span></h2>
                 </div>
             </div>
         </div>
@@ -269,8 +269,8 @@
     <footer>
         <div class="main">
         	<div class="aligncenter">
-            	<span>Catering.com &copy; 2012</span>
-                <a rel="nofollow" class="link" target="_blank" href="http://www.templatemonster.com/">Website Template</a> by TemplateMonster.com<br>Busque m&aacute;s plantillas web gratis <a href="http://www.mejoresplantillasgratis.es" target="_blank">en MPG.es</a>.
+            	<span>GranChino.com &copy; 2014</span>
+                <a rel="nofollow" class="link" target="_blank" href="http://www.github.com/zhquan/PFG/">Quan Zhou</a>
             </div>
         </div>
     </footer>
