--- a/restaurante/templates/foro.html
+++ b/restaurante/templates/foro.html
@@ -36,7 +36,7 @@
                             <li><a href="catalogue.html">Catalogue </a></li>
                             <li><a href="shipping.html">Shipping</a></li>
                             <li><a href="faq.html">FAQ </a></li>
-                            <li><a class="active" href="contact.html">Contact</a></li>
+                            <li><a class="active" href="foro.html">Foro</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -57,21 +57,18 @@
             <div class="wrapper">
             	<article class="col-1">
                 	<div class="indent-left">
-                    	<h3 class="p1">Our Contacts</h3>
-                        <figure class="indent-bot">
-                            <iframe width="240" height="180" src="../templates/http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Brooklyn,+New+York,+NY,+United+States&amp;aq=0&amp;sll=37.0625,-95.677068&amp;sspn=61.282355,146.513672&amp;ie=UTF8&amp;hq=&amp;hnear=Brooklyn,+Kings,+New+York&amp;ll=40.649974,-73.950005&amp;spn=0.01628,0.025663&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe>
-                        </figure>
+                    	<h3 class="p1">Temas</h3>
+                        
                         <dl>
-                            <dt class="p1">USA 8901 Marmora Rd, Glasgow</dt>
-                            <dd><span>Freephone:</span>  +1 800 559 6580</dd>
-                            <dd><span>Telephone:</span>  +1 800 603 6035</dd>
-                            <dd><span>Fax:</span>  +1 800 889 9898</dd>
-                            <dd><span>Email:</span><a class="color-2" href="#">mail@demolink.org</a></dd>
+                            <dt class="p1"></dt>
+                            <dd><span> </span>  </dd>
+                            <dd><span> </span>  </dd>
+                            <dd><span> </span>  </dd>
                         </dl>
                     </div>
                 </article>
                 <article class="col-2">
-                	<h3 class="p1">Contact Form</h3>
+                	<h3 class="p1">Nuevo tema</h3>
                     <form id="contact-form" method="post" enctype="multipart/form-data">                    
                         <fieldset>
                               <label><span class="text-form">Your Name:</span><input name="name" type="text" /></label>
@@ -98,8 +95,8 @@
     <footer>
         <div class="main">
         	<div class="aligncenter">
-            	<span>Catering.com &copy; 2012</span>
-                <a rel="nofollow" class="link" target="_blank" href="http://www.templatemonster.com/">Website Template</a> by TemplateMonster.com<br>Busque m&aacute;s plantillas web gratis <a href="http://www.mejoresplantillasgratis.es" target="_blank">en MPG.es</a>.
+            	<span>GranChino.com &copy; 2014</span>
+                <a rel="nofollow" class="link" target="_blank" href="http://www.github.com/zhquan/PFG/">Quan Zhou</a>
             </div>
         </div>
     </footer>
